--- a/assets/sass/page-modules/h-main.scss
+++ b/assets/sass/page-modules/h-main.scss
@@ -4,18 +4,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5rem;
     height: calc(100vh - 7.7rem);
+    margin-top: 10rem;
+
+    @include max(900) {
+        flex-direction: column-reverse;
+    }
 
     & h2 {
         font-size: 5.5rem;
         max-width: 40rem;
         margin-bottom: 4rem;
+
+        @include max(900) {
+            font-size: 3.5rem;
+            text-align: center;
+        }
     }
 
     & p {
         font-size: 2.2rem;
         max-width: 52rem;
-        margin-bottom: 4rem;
+        margin-bottom: 10rem;
+
+        @include max(900) {
+            font-size: 2rem;
+            text-align: center;
+            max-width: 32rem;
+            margin-bottom: 2rem;
+        }
     }
 
     & a {
@@ -26,10 +44,43 @@
         border-radius: 2rem;
         border: .1rem solid #000;
         transition: .2s ease-in-out;
+        text-align: center;
+        width: 25rem;
 
         &:hover {
             background-color: #fff;
             color: #000;
+        }
+    }
+
+    &__figures{
+        display: flex;
+        gap: 2rem;
+        margin-top: 8rem;
+
+        @include max(900) {
+            max-width: 30rem;
+            margin-top: 2rem;
+        }
+
+        & svg {
+            width: 10rem;
+        }
+    }
+
+    &__contents {
+        display: flex;
+        flex-direction: column;
+
+        @include max(900) {
+            align-items: center;
+        }
+    }
+
+    &__image {
+
+        & img {
+            width: 30rem;
         }
     }
 }
